--- a/Logistics/business/fangkuan.html
+++ b/Logistics/business/fangkuan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -44,29 +44,29 @@
             color: #5986de;
         }
 
-        .check_box .check_main_left form label.active input {
-            display: block;
-        }
+            .check_box .check_main_left form label.active input {
+                display: block;
+            }
 
 
         .check_box .check_main_right form label.active {
             color: #5986de;
         }
 
-        .check_box .check_main_right form label.active input {
-            display: block;
-        }
+            .check_box .check_main_right form label.active input {
+                display: block;
+            }
 
         .huo_num {
             text-align: right;
         }
 
-        .huo_num input {
-            width: 30%;
-            padding: 0;
-            height: 1.2rem;
-            line-height: 1.2rem;
-        }
+            .huo_num input {
+                width: 30%;
+                padding: 0;
+                height: 1.2rem;
+                line-height: 1.2rem;
+            }
 
         .yunfei input {
             width: 50%;
@@ -87,7 +87,7 @@
             <!-- 你的html代码 -->
             <header class="bar bar-nav">
                 <a href="javascript:;" onclick="window.history.go(-1)" class="icon iconfont icon-zuo pull-left"></a>
-                <a href="fangkuan_details.html" class="icon pull-right dis_inline green" style="color:#fff;border:1px solid #bbb; line-height:1.5rem; padding:0 1rem;margin-top:.28rem;">下一步</a>
+                <a onclick="Test()" class="icon pull-right dis_inline green" style="color:#fff;border:1px solid #bbb; line-height:1.5rem; padding:0 1rem;margin-top:.28rem;">下一步</a>
                 <h1 class="title">银行卡放款单</h1>
             </header>
 
@@ -120,19 +120,19 @@
                             <form class="bor_bottom" style="padding:1rem; margin: 0 .3rem;">
                                 <label class="dis_flex jus_bet ali_center fz_14 line_he_40">
                                     今天
-                                    <input name="time" type="radio" class="col_50 bor_none dis_none txt_right iconfont icon-right"/>
-                                 </label>
+                                    <input name="time" type="radio" class="col_50 bor_none dis_none txt_right iconfont icon-right" />
+                                </label>
                                 <label class="dis_flex jus_bet ali_center fz_14 line_he_40 active">
                                     最近一周
-                                    <input name="time" type="radio" class="col_50 bor_none  dis_none txt_right iconfont icon-right"/> 
+                                    <input name="time" type="radio" class="col_50 bor_none  dis_none txt_right iconfont icon-right" />
                                 </label>
                                 <label class="dis_flex jus_bet ali_center fz_14 line_he_40">
-                                    最近一月 
-                                    <input name="time" type="radio" class="col_50 bor_none dis_none txt_right iconfont icon-right"/>
+                                    最近一月
+                                    <input name="time" type="radio" class="col_50 bor_none dis_none txt_right iconfont icon-right" />
                                 </label>
                                 <label class="dis_flex jus_bet ali_center fz_14 line_he_40">
-                                    最近三月 
-                                    <input name="time" type="radio" class="col_50 bor_none dis_none txt_right iconfont icon-right"/>
+                                    最近三月
+                                    <input name="time" type="radio" class="col_50 bor_none dis_none txt_right iconfont icon-right" />
                                 </label>
                             </form>
                             <div class="dis_flex jus_aro bor_bottom" style="padding:.5rem;">
@@ -150,19 +150,19 @@
                                 <form class="bor_bottom" style="padding:1rem 0; margin: 0 .3rem;">
                                     <label class="dis_flex jus_bet ali_center fz_14 line_he_40">
                                         山东淄博---------河北邯郸
-                                        <input name="city" type="radio" class="bor_none col_30 dis_none txt_right iconfont icon-right"/> 
+                                        <input name="city" type="radio" class="bor_none col_30 dis_none txt_right iconfont icon-right" />
                                     </label>
                                     <label class="dis_flex jus_bet ali_center fz_14 line_he_40 active">
                                         山东淄博---------河北邯郸
-                                        <input name="city" type="radio" class="bor_none col_30  dis_none txt_right iconfont icon-right"/> 
+                                        <input name="city" type="radio" class="bor_none col_30  dis_none txt_right iconfont icon-right" />
                                     </label>
                                     <label class="dis_flex jus_bet ali_center fz_14 line_he_40">
-                                        山东淄博---------河北邯郸 
-                                        <input name="city" type="radio" class="bor_none col_30 dis_none txt_right iconfont icon-right"/>
+                                        山东淄博---------河北邯郸
+                                        <input name="city" type="radio" class="bor_none col_30 dis_none txt_right iconfont icon-right" />
                                     </label>
                                     <label class="dis_flex jus_bet ali_center fz_14 line_he_40">
-                                        山东淄博---------河北邯郸 
-                                        <input name="city" type="radio" class="bor_none col_30 dis_none txt_right iconfont icon-right"/>
+                                        山东淄博---------河北邯郸
+                                        <input name="city" type="radio" class="bor_none col_30 dis_none txt_right iconfont icon-right" />
                                     </label>
                                 </form>
                             </ul>
@@ -188,71 +188,102 @@
                         </p>
                     </div>
                     <form>
-                        <label class="dis_flex jus_bet ali_center mart_10 white" style="padding:.5rem">
-                            <span class="col_20"><input  class="col_90" type="checkbox"></span>
+                        <!--<label class="dis_flex jus_bet ali_center mart_10 white" style="padding:.5rem">
+                            <span class="col_20"><input class="col_90" type="checkbox"></span>
                             <a href="choose_bus.html" class="col_80">
                                 <div style="line-height:1.5rem;">
-                                <p class="fz_14 dis_flex jus_bet">
-                                    <span class="col_50">收货人： <i>武大郎</i></span>
-                                    <span class="col_50">单数：<i>5</i></span>
-                                </p>
-                                <p class="fz_14">应放总金额： <i>10210</i></p>
-                                <p class="fz_14"><i>银行卡：<span>2099209920992099</span></i></p>
-                                <p class="fz_14"><i>开户行：<span>招商银行西二旗支行</span></i></p>
-                                <p class="fz_14 dis_flex" style="justify-content:flex-end"><i class="fz_12" style="margin-left:1rem;">2016年-12月-23日 09：21</i></p>
-                            </div>
+                                    <p class="fz_14 dis_flex jus_bet">
+                                        <span class="col_50">收货人： <i>武大郎</i></span>
+                                        <span class="col_50">单数：<i>5</i></span>
+                                    </p>
+                                    <p class="fz_14">应放总金额： <i>10210</i></p>
+                                    <p class="fz_14"><i>银行卡：<span>2099209920992099</span></i></p>
+                                    <p class="fz_14"><i>开户行：<span>招商银行西二旗支行</span></i></p>
+                                    <p class="fz_14 dis_flex" style="justify-content:flex-end"><i class="fz_12" style="margin-left:1rem;">2016年-12月-23日 09：21</i></p>
+                                </div>
                             </a>
+                        </label>-->
+                        <label class="dis_flex jus_bet ali_center mart_10 white" style="padding:.5rem" id="content_list">
+                            <!--数据-->
                         </label>
-                       <label class="dis_flex jus_bet ali_center mart_10 white" style="padding:.5rem">
-                            <span class="col_20"><input  class="col_90" type="checkbox"></span>
-                            <i  class="col_80">
-                                <div style="line-height:1.5rem;">
-                                <p class="fz_14 dis_flex jus_bet">
-                                    <span class="col_50">收货人： <i>武大郎</i></span>
-                                    <span class="col_50">单数：<i>5</i></span>
-                                </p>
-                                <p class="fz_14 dis_flex jus_bet">
-                                    <span class="col_60">应放总金额： <i>10210</i></span>
-                                    <span class="col_40 dis_flex"><a href="../payee/shoukuan.html" class="green fc_white fz_14 padlr_20 line_he_30" style="border:none;">现金放款</a></span></p>
-                                <p class="fz_14 dis_flex" style="justify-content:flex-end"><i class="fz_12" style="margin-left:1rem;">2016年-12月-23日 09：21</i></p>
-                            </div>
-                            </i>
-                        </label>
-
                     </form>
                 </div>
-
-
             </div>
         </div>
     </div>
 
-    <script type='text/javascript' src='/Style/scripts/all.js' charset='utf-8'></script>
-    
+    <script type="text/javascript" src="/Style/scripts/all.js" charset='utf-8'></script>
+    <script type="text/javascript" src="/Style/scripts/main.js" charset='utf-8'></script>
+
+    <script id="content_list_temp" type="text/html">
+
+        {{if data.length>0}}
+        {{each data as v}}
+        <span class="col_20"><input type="checkbox" name="checkCommd" id="fxk" value="{{each v.OrderList as v}}{{v}},{{/each}}" class="col_40" /></span>
+        <i class="col_80">
+            <div style="line-height:1.5rem;">
+                <p class="fz_14 dis_flex jus_bet">
+                    <span class="col_50">收货人： <i>{{v.Consignee}}</i></span>
+                    <span class="col_50">发货人： <i>{{v.Consignor}}</i></span>
+                    <span class="col_50">单数：<i>{{v.num}}</i></span>
+                </p>
+                <p class="fz_14 dis_flex jus_bet">
+                    <span class="col_60">应放总金额： <i>{{v.allamount}}</i></span>
+                    <!--<span class="col_40 dis_flex"><a href="../payee/shoukuan.html" class="green fc_white fz_14 padlr_20 line_he_30" style="border:none;">现金放款</a></span>-->
+                </p>
+                <p class="fz_14 dis_flex" style="justify-content:flex-end"><i class="fz_12" style="margin-left:1rem;">2016年-12月-23日 09：21</i></p>
+            </div>
+        </i>
+        {{/each}}
+        {{/if}}
+
+    </script>
+
     <script>
         $(function () {
             $.init();
             $.config = { router: false }
-            $('.change_btn').click(function () {
-                var v = $(this);
-                var val = v.html()
-                if (val == '更改') {
-                    v.html('确认')
-                        .parents('.zbsh-li').find('.huo_num,.mudidi,.yunfei').html('<input type="text" class="col_60"/>');
-                } else {
-                    v.html('更改');
-                    var huonum = v.parents('.zbsh-li').find('.huo_num input').val();
-                    v.parents('.zbsh-li').find('.huo_num').html('x' + huonum);
-                    var huonum = v.parents('.zbsh-li').find('.mudidi input').val();
-                    v.parents('.zbsh-li').find('.mudidi').html(huonum);
-                    var huonum = v.parents('.zbsh-li').find('.yunfei input').val();
-                    v.parents('.zbsh-li').find('.yunfei').html(huonum);
-                }
+        });
 
-            })
+        PageInit(function () {
+            GetHTML("GetLendersList", {  }, function (data) {
+                if (CheckHTMLData(data)) {
+                    let html = TempToHtml("content_list_temp", data);
+                    $("#content_list").html(html);
+                }
+            });
         });
     </script>
 
 </body>
 
 </html>
+<script type="text/javascript">
+        var isCheckAll = false;
+        function swapCheck() {
+            if (isCheckAll) {
+                $("input[type='checkbox']").each(function () {
+                    this.checked = false;
+                });
+                isCheckAll = false;
+            } else {
+                $("input[type='checkbox']").each(function () {
+                    this.checked = true;
+                });
+                isCheckAll = true;
+            }
+        }
+        function Test() {
+            var obj = document.getElementsByName("checkCommd");
+            var OrderList = document.getElementById("fxk").value;
+            var s = '';
+            for (var i = 0; i < obj.length; i++) {
+                if (obj[i].checked) s += obj[i].value + ',';
+            }
+            if (s == "") { Msg("您还没有选择任何物品!"); }
+            else {
+                SetLocalData("OrderList", OrderList);
+                Href("/business/fangkuan_details.html");
+            }
+        }
+</script>
