--- a/Logistics/count/index.html
+++ b/Logistics/count/index.html
@@ -32,19 +32,19 @@
             </header>
 
             <nav class="bar bar-tab">
-                <a class="tab-item external " href="../business/index.html">
+                <a class="tab-item external " href="/LC/MenuBar/LC_BusinessIndex.aspx">
                   <span class="icon iconfont icon-filetexto"></span>
                   <span class="tab-label">物流业务</span>
               </a>
-                <a class="tab-item external active" href="index.html">
+                <a class="tab-item external active" href="/count/index.html">
                   <span class="icon iconfont icon-fcstubiao19"></span>
                   <span class="tab-label">运营统计</span>
               </a>
-                <a class="tab-item external" href="../manage/index.html">
+                <a class="tab-item external" href="/manage/index.html">
                   <span class="icon iconfont icon-guanli"></span>
                   <span class="tab-label">物流管理</span>
               </a>
-                <a class="tab-item external" href="../user/index.html">
+                <a class="tab-item external" href="/LC/MenuBar/Personal.aspx">
                   <span class="icon iconfont icon-user-circle"></span>
                   <span class="tab-label">我的</span>
               </a>
@@ -84,7 +84,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="shangjia-li3">
+                        <!--<li class="shangjia-li3">
                             <a href="fengongsi_yunying.html" class="row">
                                 <div class="col-30 shangjia-left">
                                     <span class="iconfont icon-done_all" style="color: #a6a6a6;"></span>
@@ -109,7 +109,7 @@
                                     <span class="iconfont icon-gengduo"></span>
                                 </div>
                             </a>
-                        </li>
+                        </li>-->
                     </ul>
                 </div>
 
