--- a/Logistics/manage/index.html
+++ b/Logistics/manage/index.html
@@ -32,11 +32,11 @@
                   <span class="icon iconfont icon-filetexto"></span>
                   <span class="tab-label">物流业务</span>
               </a>
-                <a class="tab-item external" href="/count/">
+                <a class="tab-item external" href="/count/index.html">
                   <span class="icon iconfont icon-fcstubiao19"></span>
                   <span class="tab-label">运营统计</span>
               </a>
-                <a class="tab-item external active" href="index.html">
+                <a class="tab-item external active" href="/manage/index.html">
                   <span class="icon iconfont icon-guanli"></span>
                   <span class="tab-label">物流管理</span>
               </a>
